Десктопная версия формы

--- a/source/pug/blocks/form/1_companion-profile.pug
+++ b/source/pug/blocks/form/1_companion-profile.pug
@@ -20,7 +20,7 @@ section.companion-profile
         label(for="person-image") <span>Сменить</span> фото
 
       section.companion-profile__tags
-        h3.companion-profile__legend Тэги
+        h3.companion-profile__legend.companion-profile__legend--left Тэги
         textarea.companion-profile__tags-textarea(name="person-tags" placeholder="Введите тэги") #бургер #бар #футбол #концерт #крафт
 
       section.companion-profile__transports
