--- a/source/pug/blocks/form/3_2_companion-steps-route.pug
+++ b/source/pug/blocks/form/3_2_companion-steps-route.pug
@@ -9,11 +9,11 @@ section.companion-add-plan__step.step-route(id="route")
 
     ul.step-header__navigation
       li.step-header__navigation-item.step-header__navigation-item--active
-        a(href="") Даты
+        a.step-header__navigation-item-link(href="#dates") Даты
       li.step-header__navigation-item
-        a(href="#route") Маршрут
+        a.step-header__navigation-item-link.step-header__navigation-item-link--active(href="") Маршрут
       li.step-header__navigation-item
-        a(href="#entertaiment") Развлечения
+        a.step-header__navigation-item-link(href="#entertaiment") Развлечения
 
   section.step-route__countries
     h5.visually-hidden Выбор стран
