--- a/source/pug/blocks/form/3_3_companion-steps-entertaiment.pug
+++ b/source/pug/blocks/form/3_3_companion-steps-entertaiment.pug
@@ -5,15 +5,15 @@ section.companion-add-plan__step.step-entertaiment(id="entertaiment")
         | Шаг 3.
         br
         | Развлечения
-      p.step-header__description Наконец, расскажите о своих планах времяпровождения. Можно писать в свободной форме и ставить тэги.
+      p.step-header__description Наконец, расскажите о своих планах времяпровождения.<br>Можно писать в свободной форме и ставить тэги.
 
     ul.step-header__navigation
       li.step-header__navigation-item.step-header__navigation-item--active
-        a(href="") Даты
+        a.step-header__navigation-item-link(href="#dates") Даты
       li.step-header__navigation-item
-        a(href="#route") Маршрут
+        a.step-header__navigation-item-link(href="#route") Маршрут
       li.step-header__navigation-item
-        a(href="#entertaiment") Развлечения
+        a.step-header__navigation-item-link.step-header__navigation-item-link--active(href="") Развлечения
 
   ul.step-entertaiment__list
     li.step-entertaiment__list-item
