--- a/source/sass/base/fonts.scss
+++ b/source/sass/base/fonts.scss
@@ -1,11 +1,11 @@
-@include font-face(Blogger Sans, Bloggersans, normal, 400);
-@include font-face(Blogger Sans, Bloggersans-light, normal, 300);
-@include font-face(Blogger Sans, Bloggersans-medium, normal, 500);
-@include font-face(Blogger Sans, Bloggersans-bold, normal, 700);
+@include font-face(Blogger Sans, bloggersans, normal, 400);
+@include font-face(Blogger Sans, bloggersans-light, normal, 300);
+@include font-face(Blogger Sans, bloggersans-medium, normal, 500);
+@include font-face(Blogger Sans, bloggersans-bold, normal, 700);
 
-@include font-face(Blogger Sans, Bloggersans-italic, italic, 400);
-@include font-face(Blogger Sans, Bloggersans-lightitalic, italic, 300);
-@include font-face(Blogger Sans, Bloggersans-mediumitalic, italic, 500);
-@include font-face(Blogger Sans, Bloggersans-bolditalic, italic, 700);
+@include font-face(Blogger Sans, bloggersans-italic, italic, 400);
+@include font-face(Blogger Sans, bloggersans-lightitalic, italic, 300);
+@include font-face(Blogger Sans, bloggersans-mediumitalic, italic, 500);
+@include font-face(Blogger Sans, bloggersans-bolditalic, italic, 700);
 
 
