Правки по тех. заданию

--- a/source/pug/form.pug
+++ b/source/pug/form.pug
@@ -9,6 +9,10 @@ block variables
   - let backToHome = false
 
 block content
+
+  //- No Script block
+  include noscript
+
   //- Шапка сайта
   include blocks/header
 
