--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -7,6 +7,10 @@ block variables
   - let indexLink = false
 
 block content
+
+  //- No Script block
+  include noscript
+
   //- Шапка сайта
   include blocks/header
 
