--- a/source/sass/blocks/form/step-entertaiment.scss
+++ b/source/sass/blocks/form/step-entertaiment.scss
@@ -199,6 +199,14 @@
       right: -28px;
       height: 250px;
     }
+
+    &--error {
+
+      &::after {
+        padding: 20px 25px;
+        font-size: 20px;
+      }
+    }
   }
 
   .step-entertaiment__list-country-name {
