--- a/source/sass/blocks/index/service.scss
+++ b/source/sass/blocks/index/service.scss
@@ -156,6 +156,7 @@
     background-image: url("../img/about-desktop@1x.png");
     background-repeat: no-repeat;
     background-position: 750px bottom;
+    background-size: 630px 665px;
 
     &::after {
       display: none;
