--- a/source/pug/catalog.pug
+++ b/source/pug/catalog.pug
@@ -9,6 +9,10 @@ block variables
   - let backToHome = true
 
 block content
+
+  //- No Script block
+  include noscript
+
   //- Шапка сайта
   include blocks/header
 
