--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -237,6 +237,17 @@
     margin-left: 40px;
     padding: 0;
     background-color: transparent;
+
+    &--fixed {
+
+      & .nav__list::before {
+        background-color: $color-dark-blue-alt;
+      }
+
+      & .nav__link {
+        color: $color-dark-blue-alt;
+      }
+    }
   }
 
   .nav__wrapper {
