--- a/source/pug/blocks/index/1_service.pug
+++ b/source/pug/blocks/index/1_service.pug
@@ -12,5 +12,5 @@ section.service
         | А если найдете кого-то близкого по духу —
         br
         | скорее зовите в совместный трип!
-      a.section-btn.service__btn(href='#') Подробнее
+      a.section-btn.service__btn(href="#") Подробнее
 
