--- a/source/pug/blocks/index/2_destinations.pug
+++ b/source/pug/blocks/index/2_destinations.pug
@@ -29,5 +29,5 @@ section.destanation
       +destination-card('Франция', 'Трэ бьен, манифик!', 12518, 'france', 'img/france-mobile', 'img/france-desktop', 'img/france-desktop')
       +destination-card('Чехия', 'Закоулки старой Европы', 5326, 'czech', 'img/czech-mobile', 'img/czech-desktop', 'img/czech-desktop')
 
-    a.section-btn.destanation__btn(href='catalog.html') Показать все
+    a.section-btn.destanation__btn(href='form.html') Показать все
 
