--- a/source/pug/blocks/index/3_companions.pug
+++ b/source/pug/blocks/index/3_companions.pug
@@ -21,17 +21,17 @@ section.companions
     .companions__cards
       +companions-card-index(
         99,
-        'Таня Фирсова',
-        'offline',
+        "Таня Фирсова",
+        "offline",
         {
-          'sri-lanka': 'ШриЛанка',
-          'thailand': 'Тайланд',
-          'seychelles': 'Сейшелы'
+          "sri-lanka": "ШриЛанка",
+          "thailand": "Тайланд",
+          "seychelles": "Сейшелы"
         },
-        ['#ЗОЖ', '#ПП', '#Фитнес', '#пляж', '#авокадо', '#смузи'],
-        'img/firsova-mobile',
-        'img/firsova-tablet',
-        'img/firsova-desktop',
+        ["#ЗОЖ", "#ПП", "#Фитнес", "#пляж", "#авокадо", "#смузи"],
+        "img/firsova-mobile",
+        "img/firsova-tablet",
+        "img/firsova-desktop",
         fly=true,
         bus=false,
         bike=false,
@@ -40,21 +40,21 @@ section.companions
 
       +companions-card-index(
         80,
-        'Петя Демин',
-        'online',
+        "Петя Демин",
+        "online",
         {
-          'belgium': 'Бельгия',
-          'czech': 'Чехия'
+          "belgium": "Бельгия",
+          "czech": "Чехия"
         },
-        ['#бургер', '#бар', '#футбол', '#концерт', '#крафт'],
-        'img/demin-mobile',
-        'img/demin-tablet',
-        'img/demin-desktop',
+        ["#бургер", "#бар", "#футбол", "#концерт", "#крафт"],
+        "img/demin-mobile",
+        "img/demin-tablet",
+        "img/demin-desktop",
         fly=true,
         bus=true,
         bike=false,
         walk=true
       )
 
-    a.section-btn.companions__btn(href='catalog.html') Показать всех
+    a.section-btn.companions__btn(href="catalog.html") Показать всех
 
