--- a/source/pug/blocks/index/7_map.pug
+++ b/source/pug/blocks/index/7_map.pug
@@ -1,5 +1,5 @@
-section.map
+section.map(id="map")
   h5.visually-hidden Карта
   .map__location
-      script(async='', src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab39ee2d8f9728237d10dc5fbdeac3d0f7cfec4779c16284b738645571ccf069f&width=100%25&height=720&lang=ru_RU&scroll=true')
+      //- script(async="", src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab39ee2d8f9728237d10dc5fbdeac3d0f7cfec4779c16284b738645571ccf069f&width=100%25&height=720&lang=ru_RU&scroll=true")
 
