--- a/source/pug/blocks/index/popup.pug
+++ b/source/pug/blocks/index/popup.pug
@@ -14,5 +14,5 @@
       li.popup__item
         span.popup__service Ваш продакт-плейсмент
         span.popup__price Индивидуально
-  button.popup__close-btn(type='button') Закрыть окно
+  button.popup__close-btn(type="button") Закрыть окно
 
