--- a/source/pug/catalog.pug
+++ b/source/pug/catalog.pug
@@ -11,7 +11,7 @@ block variables
 block content
 
   //- No Script block
-  include noscript
+  include blocks/noscript
 
   //- Шапка сайта
   include blocks/header
@@ -43,6 +43,6 @@ block content
 
 block scripts
   script(src="js/main.js")
-  script(src="js/picturefill.min.js" async)
-  script.
-    document.createElement( "picture" );
+  //- script(src="js/picturefill.min.js" async)
+  //- script.
+  //-   document.createElement( "picture" );
