--- a/source/pug/blocks/form/1_companion-profile.pug
+++ b/source/pug/blocks/form/1_companion-profile.pug
@@ -5,7 +5,7 @@ section.companion-profile
   .wrapper.companion-profile__wrapper
     form.companion-profile__form(action="https://echo.htmlacademy.ru", method="post")
       .companion-profile__level
-        svg.companion-profile__level-progress.companion-profile__level-progress--80(viewBox='0 0 100 100')
+        svg.companion-profile__level-progress.companion-profile__level-progress--80(viewBox="0 0 100 100" width="100" height="100")
           circle(cx='50', cy='50', r='35.5')
         span.companion-profile__level-number 80
         span.companion-profile__level-text level
