--- a/source/pug/blocks/form/2_companion-plans.pug
+++ b/source/pug/blocks/form/2_companion-plans.pug
@@ -12,7 +12,7 @@ section.companion-plans
         .companion-plans__item-info
           p.companion-plans__quantity 3 попутчика
           p.companion-plans__dates 26 мар — 29 мар
-          a.companion-plans__edit-btn(href="") Изменить
+          a.companion-plans__edit-btn(href="editplan.html") Изменить
 
       li.companion-plans__item
         .companion-plans__item-country
@@ -21,4 +21,4 @@ section.companion-plans
         .companion-plans__item-info
           p.companion-plans__quantity 1 попутчик
           p.companion-plans__dates 1 июл — 15 июл
-          a.companion-plans__edit-btn(href="") Изменить
+          a.companion-plans__edit-btn(href="editplan.html") Изменить
