--- a/source/pug/blocks/index/5_registration.pug
+++ b/source/pug/blocks/index/5_registration.pug
@@ -8,11 +8,11 @@ section.registration
       br
       | Уже зарегистрированы? Тогда
       br
-      | скорее <a href='#'>авторизуйтесь</a>.
+      | скорее <a href="auth.html">авторизуйтесь</a>.
 
-    form.registration__form(action='https://echo.htmlacademy.ru' method="POST")
-      input.registration__email(type='text', name='email', placeholder='E-mail')
-      button.registration__form-btn(type='submit') Регистрация
+    form.registration__form(action="https://echo.htmlacademy.ru" method="POST")
+      input.registration__email(type="text", name="email", placeholder="E-mail")
+      button.registration__form-btn(type="submit") Регистрация
 
     p.registration__tagline
       | Остались вопросы?
@@ -21,25 +21,13 @@ section.registration
 
 
     .registration__contacts
-      a.registration__contacts-link(href='tel:88005558628')
+      a.registration__contacts-link(href="tel:88005558628")
         span.registration__contacts-link-icon
-          svg#icon-phone(viewBox='0 0 36 36')
-            path(d='M18,0C11.6,0,5.2,1.1,2.8,3.4C0.9,5.3,0.2,8.7,0,10.8c0,0,0,0.2,0,0.3c0,0.8,0.7,1.5,1.5,1.5\
-            c0.1,0,3.7-0.3,5.9-0.5c0.1,0,0.1,0,0.2,0c0.8,0,1.5-0.7,1.5-1.5l0-3C9,6.7,9.7,6,10.7,6h14.7C26.2,6,27,6.7,27,7.7l0,3\
-            c0,0.8,0.7,1.5,1.5,1.5c0.1,0,0.1,0,0.2,0c2.2,0.2,5.8,0.5,5.9,0.5c0.8,0,1.5-0.7,1.5-1.5c0-0.1,0-0.3,0-0.3\
-            c-0.2-2.1-0.9-5.5-2.8-7.4C30.8,1.1,24.4,0,18,0z M18,19.5c-1.7,0-3,1.3-3,3s1.3,3,3,3c1.7,0,3-1.3,3-3S19.7,19.5,18,19.5z\
-            M15.7,12.7v-1.9c0-1-0.8-1.9-1.9-1.9S12,9.8,12,10.9v1.9L1.9,23.6c-0.7,0.7-1.1,1.6-1.1,2.7v3c0,1.7,1.3,3,3,3h0.8v1.9\
-            c0,1,0.8,1.9,1.9,1.9s1.9-0.8,1.9-1.9v-1.9h19.5v1.9c0,1,0.8,1.9,1.9,1.9c1,0,1.9-0.8,1.9-1.9v-1.9h0.8c1.7,0,3-1.3,3-3v-3\
-            c0-1.1-0.4-2-1.1-2.7L24,12.7v-1.9c0-1-0.8-1.9-1.9-1.9s-1.9,0.8-1.9,1.9v1.9H15.7z M18,16.5c3.3,0,6,2.7,6,6c0,3.3-2.7,6-6,6\
-            c-3.3,0-6-2.7-6-6C12,19.2,14.7,16.5,18,16.5z')
+          +svg-icon("contacts-phone", 18, 18)
         span.registration__contacts-link-text 8 800 555-86-28
 
-      a.registration__contacts-link(href='mailto:mail@htmlacademy.ru')
+      a.registration__contacts-link(href="mailto:mail@htmlacademy.ru")
         span.registration__contacts-link-icon
-          svg#icon-mail(viewBox='0 0 36 26')
-            path(d='M0,23c0,1.6,1.3,3,3,3h30c1.7,0,3-1.3,3-3V3c0-1.6-1.3-3-3-3H3C1.3,0,0,1.3,0,3L0,23L0,23z M11,13L4.2,6.2\
-            c-0.6-0.6-0.6-1.5,0-2c0.6-0.6,1.5-0.6,2.1,0l11,10.9c0.4,0.4,1.2,0.4,1.6,0l11-10.9c0.6-0.6,1.5-0.6,2.1,0c0.6,0.6,0.6,1.5,0,2\
-            L25,13l6.9,6.8c0.6,0.6,0.6,1.5,0,2c-0.6,0.6-1.5,0.6-2.1,0l-6.9-6.8c0,0-2.1,2.2-2.5,2.5c-0.6,0.6-1.4,1-2.4,1\
-            c-0.9,0-1.8-0.4-2.4-1c-0.4-0.4-2.5-2.5-2.5-2.5l-6.9,6.8c-0.6,0.6-1.5,0.6-2.1,0c-0.6-0.6-0.6-1.5,0-2L11,13z')
+          +svg-icon("contacts-mail", 18, 13)
         span.registration__contacts-link-text mail@htmlacademy.ru
 
