--- a/source/pug/blocks/index/6_route.pug
+++ b/source/pug/blocks/index/6_route.pug
@@ -4,12 +4,11 @@ section.route
     .route__content
       a.route__address(href="#")
         span.route__address-icon
-          svg#icon-route-marker(viewBox='0 0 28 43')
-            path(d='M11.7,13.9c0-1.2,1-2.2,2.3-2.2s2.3,1,2.3,2.2c0,1.2-1,2.2-2.3,2.2C12.8,16.1,11.7,15.1,11.7,13.9z M14,8.1  c-3.2,0-5.9,2.6-5.9,5.8s2.6,5.8,5.9,5.8c3.2,0,5.9-2.6,5.9-5.8C19.9,10.7,17.2,8.1,14,8.1z M0,13.6c0,9.1,10.9,16.2,11.7,26.7v0.4  c0,1.2,1,2.2,2.3,2.2s2.3-1,2.3-2.2v-0.4C17.2,29.8,28,22.8,28,13.6C28,6.1,21.7,0,14,0C6.3,0,0,6.1,0,13.6z M14,4.5  c5.2,0,9.5,4.2,9.5,9.4c0,5.2-4.2,9.4-9.5,9.4s-9.5-4.2-9.5-9.4C4.5,8.7,8.8,4.5,14,4.5z')
+          +svg-icon("contacts-location", 14, 22)
         span.route__address-text
-          | ул. Большая
-          br
-          |  Конюшенная, 19/8
+        | ул. Большая
+        br
+        |  Конюшенная, 19/8
 
-      a.section-btn.section-btn--outline.route__btn(href='#') Проложить маршрут
+      a.section-btn.section-btn--outline.route__btn(href="https://yandex.ru/maps/10335/tashkent/?ll=69.304911%2C41.312012&mode=routes&rtext=41.312110%2C69.332752~41.312650%2C69.279087&rtt=auto&ruri=~&z=14.4" target="_blank") Проложить маршрут
 
