--- a/source/sass/blocks/index/companions.scss
+++ b/source/sass/blocks/index/companions.scss
@@ -99,12 +99,24 @@
   flex-direction: column;
   margin-bottom: 10px;
   border-radius: 10px;
+  transition: all 0.2s;
+
+  &:hover {
+
+    & .companions__card-image {
+      transform: scale(1.1);
+    }
+  }
 }
 
-.companions__card-image {
+.companions__card-link {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   overflow: hidden;
+}
+
+.companions__card-image {
+  transition: all 0.2s;
 }
 
 .companions__card-level {
@@ -498,7 +510,7 @@
     }
   }
 
-  .companions__card-image {
+  .companions__card-link {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
   }
@@ -626,7 +638,7 @@
 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .companions__card-tags {
-    display: block;
+    width: 220px;
     text-align: center;
   }
 }
